--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,5 +3,30 @@
 	"packageManager": "yarn@4.9.2",
 	"private": true,
 	"version": "0.0.1",
-	"type": "module"
+	"type": "module",
+	"scripts": {
+		"dev": "NODE_ENV=dev tsx watch src/app.ts",
+		"build": "tsc src/app.ts --outDir dist",
+		"start": "NODE_ENV=production node dist/app.js"
+	},
+	"dependencies": {
+		"@aws-sdk/client-s3": "^3.850.0",
+		"@elysiajs/cors": "^1.3.3",
+		"@elysiajs/jwt": "^1.3.2",
+		"@elysiajs/node": "^1.3.0",
+		"@minemaker/db": "workspace:*",
+		"@types/bcrypt": "^6.0.0",
+		"bcrypt": "^6.0.0",
+		"cloudflare": "^4.5.0",
+		"dotenv": "^17.2.1",
+		"elysia": "^1.3.6",
+		"elysia-autoload": "^1.5.2",
+		"elysia-ip": "^1.0.10",
+		"snowyflake": "^2.0.1"
+	},
+	"devDependencies": {
+		"@types/node": "^24.1.0",
+		"tsx": "^4.20.3",
+		"typescript": "^5.8.3"
+	}
 }
