--- a/libs/db/tsconfig.json
+++ b/libs/db/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"compilerOptions": {
-		"module": "nodenext",
-		"moduleResolution": "nodenext",
-		"target": "es2022",
+		"target": "ES2022",
+		"module": "preserve",
+		"moduleResolution": "bundler",
 		"strict": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
