--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
 		"eslint": "^8.33.0",
 		"eslint-config-prettier": "^8.6.0",
 		"prettier": "3.6.2",
-		"typescript": "^4.9.5"
+		"typescript": "^5.8.3"
+	},
+	"dependencies": {
+		"@yarnpkg/pnpify": "^4.1.5"
 	}
 }
