api user integration

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -20,6 +20,10 @@ DB_NAME=
 CF_TOKEN=
 CF_ACCOUNT_ID=
 
+# turnstile
+CF_TURNSTILE_KEY=
+CF_TURNSTILE_SECRET=
+
 # r2
 R2_ACCESS_KEY_ID=
 R2_SECRET_ACCESS_KEY=
