--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,6 +18,7 @@
 		"@types/bcrypt": "^6.0.0",
 		"bcrypt": "^6.0.0",
 		"cloudflare": "^4.5.0",
+		"disposable-email-domains-js": "^1.15.0",
 		"dotenv": "^17.2.1",
 		"elysia": "^1.3.6",
 		"elysia-autoload": "^1.5.2",
