--- a/libs/ui/tsconfig.json
+++ b/libs/ui/tsconfig.json
@@ -10,6 +10,8 @@
 		"sourceMap": true,
 		"strict": true,
 		"module": "NodeNext",
-		"moduleResolution": "NodeNext"
+		"moduleResolution": "NodeNext",
+		"outDir": "dist",
+		"types": ["unplugin-icons/types/svelte"]
 	}
 }
