--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "API_URL=http://localhost:3000 vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
@@ -16,6 +16,8 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
+		"@iconify/json": "^2.2.363",
+		"@minemaker/ui": "workspace:*",
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
@@ -34,6 +36,7 @@
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.20.0",
+		"unplugin-icons": "^22.1.0",
 		"vite": "^7.0.4",
 		"vite-plugin-devtools-json": "^0.2.0"
 	}
