--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
 		"@elysiajs/cors": "^1.3.3",
 		"@elysiajs/jwt": "^1.3.2",
 		"@elysiajs/node": "^1.3.0",
+		"@elysiajs/swagger": "^1.3.1",
 		"@minemaker/db": "workspace:*",
 		"@types/bcrypt": "^6.0.0",
 		"bcrypt": "^6.0.0",
