--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "API_URL=http://localhost:3000 vite dev",
+		"dev": "orval && API_URL=http://localhost:3000 vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
@@ -24,10 +24,12 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
+		"elysia": "^1.3.6",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
+		"orval": "^7.10.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
@@ -40,5 +42,8 @@
 		"unplugin-icons": "^22.1.0",
 		"vite": "^7.0.4",
 		"vite-plugin-devtools-json": "^0.2.0"
+	},
+	"dependencies": {
+		"@elysiajs/eden": "^1.3.2"
 	}
 }
