--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -14,9 +14,11 @@
 		"lint": "prettier --check . && eslint ."
 	},
 	"devDependencies": {
+		"@born05/sveltekit-proxy": "^1.1.3",
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@iconify/json": "^2.2.363",
+		"@minemaker/db": "workspace:*",
 		"@minemaker/ui": "workspace:*",
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.22.0",
