--- a/libs/db/package.json
+++ b/libs/db/package.json
@@ -5,7 +5,9 @@
 	"version": "0.0.1",
 	"type": "module",
 	"dependencies": {
+		"@types/bcrypt": "^6.0.0",
 		"@types/pg": "^8.15.4",
+		"bcrypt": "^6.0.0",
 		"pg": "^8.16.3"
 	},
 	"devDependencies": {
