--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -37,6 +37,7 @@
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@iconify-json/fluent": "^1.2.15",
+		"@minemaker/db": "workspace:*",
 		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/package": "^2.0.0",
