--- a/libs/ui/tsconfig.json
+++ b/libs/ui/tsconfig.json
@@ -9,8 +9,9 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"module": "NodeNext",
-		"moduleResolution": "NodeNext",
+		"target": "ES2022",
+		"module": "preserve",
+		"moduleResolution": "bundler",
 		"types": ["unplugin-icons/types/svelte"]
 	}
 }
