--- a/libs/db/package.json
+++ b/libs/db/package.json
@@ -8,9 +8,11 @@
 		"@types/bcrypt": "^6.0.0",
 		"@types/pg": "^8.15.4",
 		"bcrypt": "^6.0.0",
+		"json-bigint": "^1.0.0",
 		"pg": "^8.16.3"
 	},
 	"devDependencies": {
+		"@types/json-bigint": "^1",
 		"elysia": "^1.3.6"
 	}
 }
