--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -14,7 +14,6 @@
 		"lint": "prettier --check . && eslint ."
 	},
 	"devDependencies": {
-		"@born05/sveltekit-proxy": "^1.1.3",
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@iconify/json": "^2.2.363",
@@ -26,12 +25,11 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
-		"elysia": "^1.3.6",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
-		"orval": "^7.10.0",
+		"orval": "7.10.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
@@ -44,8 +42,5 @@
 		"unplugin-icons": "^22.1.0",
 		"vite": "^7.0.4",
 		"vite-plugin-devtools-json": "^0.2.0"
-	},
-	"dependencies": {
-		"@elysiajs/eden": "^1.3.2"
 	}
 }
