--- a/libs/db/package.json
+++ b/libs/db/package.json
@@ -8,11 +8,12 @@
 		"@types/bcrypt": "^6.0.0",
 		"@types/pg": "^8.15.4",
 		"bcrypt": "^6.0.0",
+		"elysia": "^1.3.6",
 		"json-bigint": "^1.0.0",
-		"pg": "^8.16.3"
+		"pg": "^8.16.3",
+		"typescript": "^5.8.3"
 	},
 	"devDependencies": {
-		"@types/json-bigint": "^1",
-		"elysia": "^1.3.6"
+		"@types/json-bigint": "^1"
 	}
 }
