--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "orval && NODE_ENV=dev API_URL=http://localhost:3000 vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -17,10 +17,13 @@
 		"@tauri-apps/plugin-opener": "^2"
 	},
 	"devDependencies": {
+		"@minemaker/db": "workspace:*",
+		"@minemaker/ui": "workspace:*",
 		"@sveltejs/adapter-static": "^3.0.6",
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tauri-apps/cli": "^2",
+		"orval": "7.10.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.8.3",
