--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -13,6 +13,7 @@
 	},
 	"license": "MIT",
 	"dependencies": {
+		"@tailwindcss/vite": "^4.1.11",
 		"@tauri-apps/api": "^2",
 		"@tauri-apps/plugin-opener": "^2"
 	},
@@ -27,6 +28,7 @@
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.8.3",
-		"vite": "^6.0.3"
+		"vite": "^6.0.3",
+		"tailwindcss": "^4.1.11"
 	}
 }
