--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -27,8 +27,8 @@
 		"orval": "7.10.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"tailwindcss": "^4.1.11",
 		"typescript": "^5.8.3",
-		"vite": "^6.0.3",
-		"tailwindcss": "^4.1.11"
+		"vite": "^6.0.3"
 	}
 }
