--- a/libs/db/package.json
+++ b/libs/db/package.json
@@ -9,6 +9,7 @@
 		"@types/pg": "^8.15.4",
 		"bcrypt": "^6.0.0",
 		"elysia": "^1.3.6",
+		"file-type": "^21.0.0",
 		"json-bigint": "^1.0.0",
 		"pg": "^8.16.3",
 		"typescript": "^5.8.3"
