--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.850.0",
+		"@aws-sdk/s3-request-presigner": "^3.859.0",
 		"@elysiajs/bearer": "^1.3.0",
 		"@elysiajs/cors": "^1.3.3",
 		"@elysiajs/jwt": "^1.3.2",
