--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -15,7 +15,9 @@
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.11",
 		"@tauri-apps/api": "^2",
-		"@tauri-apps/plugin-opener": "^2"
+		"@tauri-apps/plugin-opener": "^2",
+		"@tauri-apps/plugin-stronghold": "~2",
+		"tauri-plugin-keyring-api": "^0.1.1"
 	},
 	"devDependencies": {
 		"@minemaker/db": "workspace:*",
