--- a/libs/db/package.json
+++ b/libs/db/package.json
@@ -5,9 +5,9 @@
 	"version": "0.0.1",
 	"type": "module",
 	"dependencies": {
+		"@minemaker/valkey": "workspace:^",
 		"@types/bcrypt": "^6.0.0",
 		"@types/pg": "^8.15.4",
-		"@valkey/valkey-glide": "^2.0.1",
 		"bcrypt": "^6.0.0",
 		"elysia": "^1.3.6",
 		"file-type": "^21.0.0",
