--- a/apps/commander/package.json
+++ b/apps/commander/package.json
@@ -6,7 +6,7 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "NODE_ENV=dev tsx watch src/index.ts",
+		"dev": "NODE_ENV=dev tsx src/index.ts",
 		"build": "tsc src/index.ts --outDir dist",
 		"start": "NODE_ENV=production node dist/index.js"
 	},
