--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -26,7 +26,7 @@
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tauri-apps/cli": "^2",
-		"orval": "7.10.0",
+		"orval": "^7.11.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.1.11",
